# unity-mcp

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CRUSH.md  Cargo.toml  HEALTH_MODE_CONFIGURATION.md  README.md  cspell.json  unity-mcp.sln
.claude/: settings.json  settings.local.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.githooks/: pre-commit
.serena/: project.yml
bridge/: .gitignore  README.md
data/: cipher-sessions.db-shm  cipher-sessions.db-wal
docs/: directory-structure.md  g_rpc_protocol_l_0_design_compilation_guide.md  guide_building_a_streamable_http_mcp_server_in_rust_with_rmcp_macro_based.md  mcp_g_rpc_architecture_class_sequence_diagrams.md  protocol.md  quickstart.md  rust-coding-guidelines.md  rust_mcp_server_design_rmcp_g_rpc_bridge.md  sprint_1_task_list.md  tools_roadmap.md  unity_mcp_server_architecture_direct_ipc_variant.md  unity_mcp_server_architecture_external_bridge_host_variant.md  unity_mcp_server_architecture_overview_rmcp_g_rpc_bridge.md  unity_mcp_server_mvp_roadmap.md
mcp/: README.md  test.sh
mcp/client/: Cargo.toml
mcp/client/src/: main.rs
mcp/server/: Cargo.toml
mcp/server/src/: main.rs
proto/: build.rs  unity_mcp.proto
reviews/: task-3-6-unity-service-review.md  task-3-7-streaming-service-review.md  unity-mcp-review.md
scripts/: bootstrap-hooks.ps1  bootstrap-hooks.sh
server/: .gitignore  ARCHITECTURE.md  CRUSH.md  Cargo.toml  build.rs
server/.claude/: settings.local.json
server/examples/: test_unity_ipc.rs  unity_log_tail.rs
server/scripts/: clean-generated.sh  generate-rust-proto.sh
server/src/: config.rs  grpc.rs  ipc.rs  lib.rs  main.rs  mcp.rs  mcp_types.rs  observability.rs  unity.rs
server/src/grpc/: channel.rs  config.rs  error.rs  mod.rs  performance.rs  server.rs  service.rs  validation.rs
server/src/grpc/performance/: cache.rs  cache_tests.rs  config.rs  monitor.rs  processor.rs  resource_pool.rs  worker_pool.rs
server/src/grpc/service/: tests.rs
server/src/grpc/validation/: tests.rs
server/src/ipc/: client.rs  codec.rs  features.rs  framing.rs  mod.rs  path.rs
server/src/mcp/: service.rs  tools.rs
server/src/mcp/tools/: assets.rs  build.rs  component.rs  diagnostics.rs  editor.rs  health.rs  prefab.rs  project_settings.rs  scene.rs  status.rs  tests.rs
server/tests/: assets_integration.rs  build_client_integration.rs  build_integration.rs  build_service_integration.rs  components_integration.rs  config_cleanup_test.rs  editor_control_integration.rs  health_mcp.rs  ipc_integration.rs  prefab_integration.rs  project_settings_integration.rs  protocol_integration.rs  scene_integration.rs  smoke.rs
tasks/: EXECUTION_PLAN.md  channel_manager_editor_control_client_implementation_task_plan_l_0.md  direct_ipc_migration_plan_rust_mcp_server_↔_unity_editor.md  direct_ipc_migration_step_0_work_instructions.md  direct_ipc_migration_step_3_work_instructions.md  direct_ipc_migration_step_4_work_instructions.md  direct_ipc_migration_step_5a_protocol_update.md  direct_ipc_migration_step_5b_unity_build_handler.md  direct_ipc_migration_step_5c_rust_client_extension.md  direct_ipc_migration_step_5d_integration_testing.md  direct_ipc_migration_step_6_work_instructions_revised.md  direct_ipc_unity_mcp_server_mvp_task_list.md  editor_dispatcher_adoption_task_list_editor_bridge.md  mvp_work_plan_direct_ipc_v1.md  mvp_worklist_checklist.md  phase_1_mcp_server_foundation_detailed_task_list_unity_mcp_server.md  phase_1_rust_module_samples_server_src.rs  phase_2_unity_bridge_execution_guide.md  project_status_and_next_tasks.md  step1_protobuf_csharp_generation_plan.md  step_3_hosting_layer_grpc_host_bridge_server_work_instructions.md  streamable_http_migration_plan.md  t_01_handshake_open_questions_→_resolved_decisions_mvp.md  t_01_ipc_handshake_spec_draft.md  t_01_phase1_proto_definitions.md  t_01_phase2_basic_handshake.md  t_01_phase3_error_handling.md  t_01_phase4_feature_negotiation.md  (+46 more)
(+122 files in other folders)
